--- a/MidiGamecon.ipynb
+++ b/MidiGamecon.ipynb
@@ -10,7 +10,7 @@
     "## Overview\n",
     "This project is the framework for converting a standard USB MIDI keyboard into a unique game controller with 2 analog sticks and 14 digital buttons, including HOME, START, and a 4-button directional pad.\n",
     "\n",
-    "Currently, example.py only logs the corresponding controller inputs to various MIDI inputs to the console, but it can easily be extended with libraries like [pyvjoy](https://github.com/tidzo/pyvjoy) (for Windows) or [python-uinput](https://pypi.org/project/python-uinput/) (for Linux) to function as a true virtual controller.\n",
+    "Currently, `example.py` only logs the controller inputs corresponding to various MIDI inputs to the console, but it can easily be extended with libraries like [pyvjoy](https://github.com/tidzo/pyvjoy) (for Windows) or [python-uinput](https://pypi.org/project/python-uinput/) (for Linux) to function as a true virtual controller.\n",
     "\n",
     "In the near future, I am planning on adapting this project for a [Teensy 3.6](https://www.pjrc.com/store/teensy36.html) to make a fully functioning standalone game controller based on [these](https://github.com/progmem/Switch-Fightstick) [projects](https://github.com/fluffymadness/ATMega32U4-Switch-Fightstick).\n",
     "\n",
@@ -301,6 +301,26 @@
     "from scripts import example\n",
     "example.example()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## For Extra Credit\n",
+    "Inspired by controllers like the [SmashBox](https://www.hitboxarcade.com/collections/main-store/products/smash-box) and too poor to buy one myself, I've been intending this whole quarter to make a custom game controller without thumbstick inputs. However, due to the complexity of the project relative to my general programming inexperience and complete inexperience working with hardware interfaces, I kept putting it off until I had the opportunity to absolutely *make* myself do it by making it my final project for this class. Nice.\n",
+    "\n",
+    "As stated, the main reason this project was difficult for me is that I've pretty much never worked with hardware interfaces before. Figuring out the `python-rtmidi` library was a chore, and in the end I still ended up implementing the main loop clock probably very suboptimally by stealing a lot of the library's own example code.\n",
+    "\n",
+    "A lot of the code concepts I used in this project were not covered in this class, and I definitely had to do a lot of exploration through documentation files and StackOverflow, in addition to raw guesswork and debugging. Examples include\n",
+    "\n",
+    "* using list comprehension to edit the items of an array while looping through it. e.g. `input_array[:] = [min(127, int(i * 1.4)) for i in input_array]`\n",
+    "\n",
+    "* extending this idea to edit only parts of an array while looping through it. e.g. `input_array[2:3] = [int(i / 2) for i in input_array[2:3]]` \n",
+    "\n",
+    "* placing mutable global variables in a seperate module file (`keys.py`) so that they can be shared across modules.\n",
+    "\n",
+    "* using the time module to regulate a main loop clock"
+   ]
   }
  ],
  "metadata": {
@@ -324,10 +344,10 @@
   "pycharm": {
    "stem_cell": {
     "cell_type": "raw",
+    "source": [],
     "metadata": {
      "collapsed": false
-    },
-    "source": []
+    }
    }
   }
  },
