--- a/MidiGamecon.ipynb
+++ b/MidiGamecon.ipynb
@@ -319,7 +319,7 @@
     "\n",
     "* placing mutable global variables in a seperate module file (`keys.py`) so that they can be shared across modules.\n",
     "\n",
-    "* using the time module to regulate a main loop clock"
+    "* using the `time` module to regulate a main loop clock"
    ]
   }
  ],
